--- a/css/master.css
+++ b/css/master.css
@@ -3,9 +3,9 @@
 }
 body{
     font-family: 'Hanken Grotesk', sans-serif;
-    width: 1440px;
     background-color: #f3f3fd;
     margin: 0;
+    height: 100vh;
 }
 .content{
     display: flex;
@@ -18,11 +18,13 @@ body{
     -ms-transform: translate(-50%,-50%);
     -o-transform: translate(-50%,-50%);
     background-color: white;
+
 }
 @media (max-width:767px) {
     .content{
         flex-direction: column;
         background-color: #f3f3fd;
+        width: 375px;
     }
 
 }
@@ -86,6 +88,12 @@ body{
     background-color: white;
     flex-basis: 50%;
     padding: 20px;
+    position: relative;
+}
+@media (max-width:767px) {
+    .summary{
+        padding-bottom: 70px;
+    }
 }
 .box{
     padding: 10px 10px;
@@ -116,16 +124,20 @@ img{
     font-weight: normal;
 }
 a{
-    display: block;
+    display: flex;
+    justify-content: center;
     position: absolute;
-    margin: 25px auto;
+    margin: 15px auto;
     padding: 10px;
-    width: 100%;
+    width: calc(100% - 40px);
     text-align: center;
     background: #303b59;
     border-radius: 60px;
     text-decoration: none;
     color: white;
-    left: 0;
-    margin-top: 165px;
+}
+@media (max-width:767px) {
+    a{
+        margin: 10px auto;
+    }
 }
